apps/dssp-jsp-testing-04/qat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jsp-testing-04
  namespace: qat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jsp-testing-04
  template:
    metadata:
      labels:
        app: dssp-jsp-testing-04
        backstage.io/kubernetes-id: dssp-jsp-testing-04
        environment: qat
    spec:
      containers:
        - name: dssp-jsp-testing-04
          image: chaitanyapandeygspann/dssp-jsp-testing-04:1.0.3
          ports:
            - containerPort: 8080
