apps/dssp-jsp-testing-04/qat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-jsp-testing-04
  namespace: qat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /dssp-jsp-testing-04(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-jsp-testing-04
                port:
                  number: 80
